# rust_course

ad_event_log_parser/: Cargo.toml  Makefile  README.md
ad_event_log_parser/src/: grammar.pest  lib.rs  main.rs
ad_event_log_parser/tests/: log_parser_tests.rs
parser-prototype/: Cargo.toml
parser-prototype/src/: main.rs
