[package]
name = "ad_event_log_parser"
version = "0.1.0"
edition = "2021"
description = "A Rust parser for analyzing ad event logs to extract insights from click report data."
license = "MIT"
authors = ["Olha Horban olha.horban@ukma.edu.ua"]

[dependencies]
nom = "7.0"
pest = "2.6"
pest_derive = "2.6"
thiserror = "2.0.3"
anyhow = "1.0.93"
csv = "1.1"

